@startuml US1010_DM
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Class" {
  entity Class

  entity SpecialClass
  class Duration
  class DayInWeek
  class Hours
}

entity SpecialClass <<entity>> {}

class Hours <<(V,#FF8B40) value object>> {}
class Duration <<(V,#FF8B40) value object>> {}
class DayInWeek <<(V,#FF8B40) value object>> {}

entity Class <<entity>> <<root>> {
}

package "<<aggregate>> ExtraordinaryClass" {
  entity ExtraordinaryClass

  class Time
  class Duration‎
}

class Hours <<(V,#FF8B40) value object>> {}
class Time <<(V,#FF8B40) value object>> {}
class Duration‎ <<(V,#FF8B40) value object>> {}

entity ExtraordinaryClass <<entity>> <<root>> {
}

package "<<aggregate>> Course" {
    entity Course
}

entity Course <<entity>> <<root>> {
}

package "<<aggregate>> Teacher" {
  entity Teacher
}

entity Teacher <<entity>> <<root>> {
}

package "<<aggregate>> Student" {
    entity Student
}

entity Student <<entity>> <<root>> {
}

Class --> "1" Course : is related to
Class ----> "1" Teacher : scheduled by
Class ----> "1" Hours : has

ExtraordinaryClass --> "1" Teacher : scheduled by
ExtraordinaryClass --> "1..*" Student : has
ExtraordinaryClass --> "1" Course : is related to

Class --> "0..*" SpecialClass : has
Class --> "1" DayInWeek : has
Class --> "1" Duration : has
SpecialClass --> "1" Hours : has

ExtraordinaryClass --> "1" "Time" : has
ExtraordinaryClass --> "1" "Duration‎" : has

@enduml
